fix(user): corrige Role, User e UserDetails* após merge